@@ -4,9 +4,9 @@
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *      http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -16,29 +16,38 @@
 package ghidra.trace.database;
 
 import java.lang.reflect.Field;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.*;
 import java.nio.ByteBuffer;
 import java.util.Iterator;
 import java.util.Objects;
 import java.util.function.BiConsumer;
 import java.util.function.Consumer;
 
-import com.google.common.collect.BoundType;
-import com.google.common.collect.Range;
-
 import db.*;
+import generic.RangeMapSetter;
 import ghidra.program.model.address.*;
+import ghidra.program.model.lang.CompilerSpecID;
 import ghidra.program.model.lang.LanguageID;
 import ghidra.program.model.symbol.RefType;
 import ghidra.program.model.symbol.RefTypeFactory;
 import ghidra.trace.database.map.DBTraceAddressSnapRangePropertyMapTree.AbstractDBTraceAddressSnapRangePropertyMapData;
+import ghidra.trace.model.Lifespan;
 import ghidra.util.database.DBAnnotatedObject;
 import ghidra.util.database.DBCachedObjectStoreFactory.AbstractDBFieldCodec;
 
+/**
+ * Various utilities used for implementing the trace database
+ *
+ * <p>
+ * Some of these are also useful from the API perspective. TODO: We should probably separate trace
+ * API utilities into another class.
+ */
 public enum DBTraceUtils {
 	;
 
+	/**
+	 * A tuple used to index/locate a block in the trace's byte stores (memory manager)
+	 */
 	public static class OffsetSnap {
 		public final long offset;
 		public final long snap;
@@ -75,9 +84,18 @@ public enum DBTraceUtils {
 		public int hashCode() {
 			return Objects.hash(offset, snap);
 		}
+
+		public boolean isScratch() {
+			return Lifespan.isScratch(snap);
+		}
 	}
 
 	// TODO: Should this be in by default?
+	/**
+	 * A codec for URLs
+	 * 
+	 * @param <OT> the type of the object whose field is encoded/decoded.
+	 */
 	public static class URLDBFieldCodec<OT extends DBAnnotatedObject>
 			extends AbstractDBFieldCodec<URL, OT, StringField> {
 		public URLDBFieldCodec(Class<OT> objectType, Field field, int column) {
@@ -111,15 +129,20 @@ public enum DBTraceUtils {
 					setValue(obj, null);
 				}
 				else {
-					setValue(obj, new URL(data));
+					setValue(obj, new URI(data).toURL());
 				}
 			}
-			catch (MalformedURLException e) {
+			catch (MalformedURLException | URISyntaxException e) {
 				throw new RuntimeException(e);
 			}
 		}
 	}
 
+	/**
+	 * A codec for language IDs
+	 * 
+	 * @param <OT> the type of the object whose field is encoded/decoded.
+	 */
 	public static class LanguageIDDBFieldCodec<OT extends DBAnnotatedObject>
 			extends AbstractDBFieldCodec<LanguageID, OT, StringField> {
 
@@ -157,6 +180,53 @@ public enum DBTraceUtils {
 		}
 	}
 
+	/**
+	 * A codec for compiler spec IDs
+	 * 
+	 * @param <OT> the type of the object whose field is encoded/decoded.
+	 */
+	public static class CompilerSpecIDDBFieldCodec<OT extends DBAnnotatedObject>
+			extends AbstractDBFieldCodec<CompilerSpecID, OT, StringField> {
+
+		public CompilerSpecIDDBFieldCodec(Class<OT> objectType, Field field, int column) {
+			super(CompilerSpecID.class, objectType, StringField.class, field, column);
+		}
+
+		@Override
+		public void store(CompilerSpecID value, StringField f) {
+			f.setString(value == null ? null : value.getIdAsString());
+		}
+
+		@Override
+		protected void doStore(OT obj, DBRecord record)
+				throws IllegalArgumentException, IllegalAccessException {
+			CompilerSpecID id = getValue(obj);
+			if (id == null) {
+				record.setString(column, null);
+			}
+			else {
+				record.setString(column, id.getIdAsString());
+			}
+		}
+
+		@Override
+		protected void doLoad(OT obj, DBRecord record)
+				throws IllegalArgumentException, IllegalAccessException {
+			String id = record.getString(column);
+			if (id == null) {
+				setValue(obj, null);
+			}
+			else {
+				setValue(obj, new CompilerSpecID(id));
+			}
+		}
+	}
+
+	/**
+	 * A (abstract) codec for the offset-snap tuple
+	 * 
+	 * @param <OT> the type of the object whose field is encoded/decoded.
+	 */
 	public abstract static class AbstractOffsetSnapDBFieldCodec<OT extends DBAnnotatedObject>
 			extends AbstractDBFieldCodec<OffsetSnap, OT, BinaryField> {
 
@@ -206,6 +276,7 @@ public enum DBTraceUtils {
 	/**
 	 * Codec for storing {@link OffsetSnap}s as {@link BinaryField}s.
 	 * 
+	 * <p>
 	 * Encodes the address space ID followed by the address then the snap.
 	 *
 	 * @param <OT> the type of the object whose field is encoded/decoded.
@@ -235,6 +306,11 @@ public enum DBTraceUtils {
 		}
 	}
 
+	/**
+	 * A codec for reference types
+	 * 
+	 * @param <OT> the type of the object whose field is encoded/decoded.
+	 */
 	public static class RefTypeDBFieldCodec<OT extends DBAnnotatedObject>
 			extends AbstractDBFieldCodec<RefType, OT, ByteField> {
 		public RefTypeDBFieldCodec(Class<OT> objectType, Field field, int column) {
@@ -267,92 +343,100 @@ public enum DBTraceUtils {
 		}
 	}
 
-	public static long lowerEndpoint(Range<Long> range) {
-		if (!range.hasLowerBound()) {
-			return Long.MIN_VALUE;
+	/**
+	 * A setter which works on ranges of addresses
+	 *
+	 * @param <E> the type of entry
+	 * @param <V> the type of value
+	 */
+	public static abstract class AddressRangeMapSetter<E, V>
+			extends RangeMapSetter<E, Address, AddressRange, V> {
+		@Override
+		protected int compare(Address d1, Address d2) {
+			return d1.compareTo(d2);
 		}
-		if (range.lowerBoundType() == BoundType.CLOSED) {
-			return range.lowerEndpoint().longValue();
+
+		@Override
+		protected Address getLower(AddressRange range) {
+			return range.getMinAddress();
 		}
-		return range.lowerEndpoint().longValue() + 1;
+
+		@Override
+		protected Address getUpper(AddressRange range) {
+			return range.getMaxAddress();
+		}
+
+		@Override
+		protected AddressRange toSpan(Address lower, Address upper) {
+			return new AddressRangeImpl(lower, upper);
+		}
+
+		@Override
+		protected Address getPrevious(Address d) {
+			return d.previous();
+		}
+
+		@Override
+		protected Address getNext(Address d) {
+			return d.next();
+		}
 	}
 
-	public static long upperEndpoint(Range<Long> range) {
-		if (!range.hasUpperBound()) {
-			return Long.MAX_VALUE;
+	/**
+	 * A setter which operates on spans of snapshot keys
+	 *
+	 * @param <E> the type of entry
+	 * @param <V> the type of value
+	 */
+	public static abstract class LifespanMapSetter<E, V>
+			extends RangeMapSetter<E, Long, Lifespan, V> {
+
+		@Override
+		protected int compare(Long d1, Long d2) {
+			return Lifespan.DOMAIN.compare(d1, d2);
 		}
-		if (range.upperBoundType() == BoundType.CLOSED) {
-			return range.upperEndpoint().longValue();
+
+		@Override
+		protected Long getLower(Lifespan span) {
+			return span.min();
 		}
-		return range.upperEndpoint().longValue() - 1;
+
+		@Override
+		protected Long getUpper(Lifespan span) {
+			return span.max();
+		}
+
+		@Override
+		protected Lifespan toSpan(Long lower, Long upper) {
+			return Lifespan.span(lower, upper);
+		}
+
+		@Override
+		protected Long getPrevious(Long d) {
+			if (d == null || d == Long.MIN_VALUE) {
+				return null;
+			}
+			return d - 1;
+		}
+
+		@Override
+		protected Long getNext(Long d) {
+			if (d == null || d == Long.MAX_VALUE) {
+				return null;
+			}
+			return d + 1;
+		}
 	}
 
-	public static Range<Long> toRange(long lowerEndpoint, long upperEndpoint) {
-		if (lowerEndpoint == Long.MIN_VALUE && upperEndpoint == Long.MAX_VALUE) {
-			return Range.all();
-		}
-		if (lowerEndpoint == Long.MIN_VALUE) {
-			return Range.atMost(upperEndpoint);
-		}
-		if (upperEndpoint == Long.MAX_VALUE) {
-			return Range.atLeast(lowerEndpoint);
-		}
-		return Range.closed(lowerEndpoint, upperEndpoint);
-	}
-
-	public static Range<Long> toRange(long snap) {
-		return toRange(snap, Long.MAX_VALUE);
-	}
-
-	public static <T extends Comparable<T>> boolean intersect(Range<T> a, Range<T> b) {
-		// Because we're working with a discrete domain, we have to be careful to never use open
-		// lower bounds. Otherwise, the following two inputs would cause a true return value when,
-		// in fact, the intersection contains no elements: (0, 1], [0, 1).
-		return a.isConnected(b) && !a.intersection(b).isEmpty();
-	}
-
-	public static <C extends Comparable<C>> int compareRanges(Range<C> a, Range<C> b) {
-		int result;
-		if (!a.hasLowerBound() && b.hasLowerBound()) {
-			return -1;
-		}
-		if (!b.hasLowerBound() && a.hasLowerBound()) {
-			return 1;
-		}
-		if (a.hasLowerBound()) { // Implies b.hasLowerBound()
-			result = a.lowerEndpoint().compareTo(b.lowerEndpoint());
-			if (result != 0) {
-				return result;
-			}
-			if (a.lowerBoundType() == BoundType.CLOSED && b.lowerBoundType() == BoundType.OPEN) {
-				return -1;
-			}
-			if (b.lowerBoundType() == BoundType.CLOSED && a.lowerBoundType() == BoundType.OPEN) {
-				return 1;
-			}
-		}
-
-		if (!a.hasUpperBound() && b.hasUpperBound()) {
-			return 1;
-		}
-		if (!b.hasUpperBound() && a.hasUpperBound()) {
-			return -1;
-		}
-		if (a.hasUpperBound()) { // Implies b.hasUpperBound()
-			result = a.upperEndpoint().compareTo(b.upperEndpoint());
-			if (result != 0) {
-				return result;
-			}
-			if (a.upperBoundType() == BoundType.CLOSED && b.upperBoundType() == BoundType.OPEN) {
-				return 1;
-			}
-			if (b.upperBoundType() == BoundType.CLOSED && a.upperBoundType() == BoundType.OPEN) {
-				return -1;
-			}
-		}
-		return 0;
-	}
-
+	/**
+	 * Derive the table name for a given addres/register space
+	 * 
+	 * @param baseName the base name of the table group
+	 * @param space the address space
+	 * @param threadKey the thread key, -1 usually indicating "no thread"
+	 * @param frameLevel the frame level
+	 * @return the table name
+	 */
 	public static String tableName(String baseName, AddressSpace space, long threadKey,
 			int frameLevel) {
 		if (space.isRegisterSpace()) {
@@ -365,17 +449,20 @@ public enum DBTraceUtils {
 	}
 
 	/**
-	 * TODO: Document me
+	 * Truncate or delete an entry to make room
 	 * 
-	 * Only call this method for entries which definitely intersect the given span
+	 * <p>
+	 * Only call this method for entries which definitely intersect the given span. This does not
+	 * verify intersection. If the data's start snap is contained in the span to clear, the entry is
+	 * deleted. Otherwise, it's end snap is set to one less than the span's start snap.
 	 * 
-	 * @param data
-	 * @param span
-	 * @param lifespanSetter
-	 * @param deleter
+	 * @param data the entry subject to truncation or deletion
+	 * @param span the span to clear up
+	 * @param lifespanSetter the method used to truncate the entry
+	 * @param deleter the method used to delete the entry
 	 */
 	public static <DR extends AbstractDBTraceAddressSnapRangePropertyMapData<?>> void makeWay(
-			DR data, Range<Long> span, BiConsumer<? super DR, Range<Long>> lifespanSetter,
+			DR data, Lifespan span, BiConsumer<? super DR, Lifespan> lifespanSetter,
 			Consumer<? super DR> deleter) {
 		// TODO: Not sure I like this rule....
 		if (span.contains(data.getY1())) {
@@ -383,34 +470,33 @@ public enum DBTraceUtils {
 			return;
 		}
 		// NOTE: We know it intersects 
-		lifespanSetter.accept(data, toRange(data.getY1(), lowerEndpoint(span) - 1));
+		lifespanSetter.accept(data, Lifespan.span(data.getY1(), span.lmin() - 1));
 	}
 
+	/**
+	 * Cast an iterator to a less-specific type, given that it cannot insert elements
+	 * 
+	 * @param <T> the desired type
+	 * @param it the iterator of more specific type
+	 * @return the same iterator
+	 */
 	@SuppressWarnings("unchecked")
 	public static <T> Iterator<T> covariantIterator(Iterator<? extends T> it) {
 		// Iterators only support read and remove, not insert. Safe to cast.
 		return (Iterator<T>) it;
 	}
 
-	public static Iterator<Long> iterateSpan(Range<Long> span) {
-		return new Iterator<>() {
-			final long end = upperEndpoint(span);
-			long val = lowerEndpoint(span);
-
-			@Override
-			public boolean hasNext() {
-				return val <= end;
-			}
-
-			@Override
-			public Long next() {
-				long next = val;
-				val++;
-				return next;
-			}
-		};
-	}
-
+	/**
+	 * Get all the addresses in a factory, starting at the given place
+	 * 
+	 * <p>
+	 * If backward, this yields all addresses coming before start
+	 * 
+	 * @param factory the factory
+	 * @param start the start (or end) address
+	 * @param forward true for all after, false for all before
+	 * @return the address set
+	 */
 	public static AddressSetView getAddressSet(AddressFactory factory, Address start,
 			boolean forward) {
 		AddressSet all = factory.getAddressSet();
@@ -422,6 +508,14 @@ public enum DBTraceUtils {
 		return factory.getAddressSet(min, start);
 	}
 
+	/**
+	 * Create an address range, checking the endpoints
+	 * 
+	 * @param min the min address, which must be less than or equal to max
+	 * @param max the max address, which must be greater than or equal to min
+	 * @return the range
+	 * @throws IllegalArgumentException if max is less than min
+	 */
 	public static AddressRange toRange(Address min, Address max) {
 		if (min.compareTo(max) > 0) {
 			throw new IllegalArgumentException("min must precede max");
