@@ -4,9 +4,9 @@
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *      http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -15,29 +15,30 @@
  */
 package ghidra.plugin.importer;
 
-import java.util.*;
-
 import java.awt.Window;
 import java.io.Closeable;
 import java.io.IOException;
+import java.util.*;
 
 import docking.widgets.OptionDialog;
 import ghidra.app.plugin.core.help.AboutDomainObjectUtils;
 import ghidra.app.services.FileSystemBrowserService;
 import ghidra.app.services.ProgramManager;
-import ghidra.app.util.GenericHelpTopics;
-import ghidra.app.util.Option;
+import ghidra.app.util.*;
 import ghidra.app.util.bin.ByteProvider;
+import ghidra.app.util.bin.FileBytesProvider;
 import ghidra.app.util.importer.MessageLog;
 import ghidra.app.util.opinion.*;
 import ghidra.formats.gfilesystem.*;
 import ghidra.framework.main.AppInfo;
 import ghidra.framework.main.FrontEndTool;
 import ghidra.framework.model.*;
-import ghidra.framework.options.Options;
 import ghidra.framework.plugintool.PluginTool;
 import ghidra.plugins.importer.batch.BatchImportDialog;
+import ghidra.program.database.mem.FileBytes;
+import ghidra.program.model.address.AddressFactory;
 import ghidra.program.model.lang.LanguageCompilerSpecPair;
+import ghidra.program.model.lang.LanguageNotFoundException;
 import ghidra.program.model.listing.Program;
 import ghidra.program.util.DefaultLanguageService;
 import ghidra.util.*;
@@ -58,16 +59,13 @@ public class ImporterUtilities {
 
 	/**
 	 * File extension filter for well known 'loadable' files for GhidraFileChoosers.
-	 *
-	 * TODO: will be refactored to use file_extension_icon.xml file info.
 	 */
 	public static final GhidraFileFilter LOADABLE_FILES_FILTER = ExtensionFileFilter.forExtensions(
-		"Loadable files", "exe", "dll", "obj", "drv", "bin", "o", "a", "so", "class", "lib");
+		"Loadable files", "exe", "dll", "obj", "drv", "bin", "hex", "o", "a", "so", "class", "lib",
+		"dylib");
 
 	/**
 	 * File extension filter for well known 'container' files for GhidraFileChoosers.
-	 *
-	 * TODO: will be refactored to use file_extension_icon.xml file info.
 	 */
 	public static final GhidraFileFilter CONTAINER_FILES_FILTER =
 		ExtensionFileFilter.forExtensions("Container files", "zip", "tar", "tgz", "jar", "gz",
@@ -84,41 +82,6 @@ public class ImporterUtilities {
 			}
 		}
 		return CollectionUtils.asList(pairs);
-	}
-
-	/**
-	 * Ensure that a {@link Program}'s metadata includes its import origin.
-	 *
-	 * @param program imported {@link Program} to modify
-	 * @param fsrl {@link FSRL} of the import source.
-	 * @param monitor {@link TaskMonitor} to use when accessing filesystem stuff.
-	 * @throws CancelledException if user cancels
-	 * @throws IOException if IO error
-	 */
-	public static void setProgramProperties(Program program, FSRL fsrl, TaskMonitor monitor)
-			throws CancelledException, IOException {
-
-		Objects.requireNonNull(monitor);
-
-		int id = program.startTransaction("setImportProperties");
-		try {
-			fsrl = fsService.getFullyQualifiedFSRL(fsrl, monitor);
-
-			Options propertyList = program.getOptions(Program.PROGRAM_INFO);
-			if (!propertyList.contains(ProgramMappingService.PROGRAM_SOURCE_FSRL)) {
-				propertyList.setString(ProgramMappingService.PROGRAM_SOURCE_FSRL, fsrl.toString());
-			}
-			String md5 = program.getExecutableMD5();
-			if ((md5 == null || md5.isEmpty()) && fsrl.getMD5() != null) {
-				program.setExecutableMD5(fsrl.getMD5());
-			}
-		}
-		finally {
-			program.endTransaction(id, true);
-		}
-		if (program.canSave()) {
-			program.save("Added import properties", monitor);
-		}
 	}
 
 	/**
@@ -188,8 +151,8 @@ public class ImporterUtilities {
 
 			if (!isFSContainer) {
 				// normal file; do a single-file import
-				importSingleFile(fullFsrl, destinationFolder, suggestedPath, tool, programManager,
-					monitor);
+				showImportSingleFileDialog(fullFsrl, destinationFolder, suggestedPath, tool,
+					programManager, monitor);
 				return;
 			}
 
@@ -250,11 +213,11 @@ public class ImporterUtilities {
 		}
 
 		if (choice == 1) {
-			importSingleFile(fullFsrl, destinationFolder, suggestedPath, tool, programManager,
-				monitor);
+			showImportSingleFileDialog(fullFsrl, destinationFolder, suggestedPath, tool,
+				programManager, monitor);
 		}
 		else if (choice == 2) {
-			BatchImportDialog.showAndImport(tool, null, Arrays.asList(fullFsrl), destinationFolder,
+			BatchImportDialog.showAndImport(tool, null, List.of(fullFsrl), destinationFolder,
 				programManager);
 		}
 		else if (choice == 3) {
@@ -267,6 +230,13 @@ public class ImporterUtilities {
 
 		Objects.requireNonNull(monitor);
 
+		// Don't allow Add To Program while "things are happening" to the program
+		if (!program.canLock()) {
+			Msg.showWarn(null, null, "Add To Program",
+				"Cannot Add To Program while program is locked.  Please wait or stop running tasks.");
+			return;
+		}
+
 		try {
 			ByteProvider provider = fsService.getByteProvider(fsrl, false, monitor);
 			if (provider.length() == 0) {
@@ -277,7 +247,7 @@ public class ImporterUtilities {
 			}
 
 			LoaderMap loaderMap = LoaderService.getSupportedLoadSpecs(provider,
-				loader -> loader.supportsLoadIntoProgram());
+				loader -> loader.supportsLoadIntoProgram(program));
 
 			SystemUtilities.runSwingLater(() -> {
 				AddToProgramDialog dialog =
@@ -295,6 +265,34 @@ public class ImporterUtilities {
 
 	}
 
+	public static void showLoadLibrariesDialog(Program program, PluginTool tool,
+			ProgramManager manager, TaskMonitor monitor) {
+
+		Objects.requireNonNull(monitor);
+
+		// Don't allow Load Libraries while "things are happening" to the program
+		if (!program.canLock()) {
+			Msg.showWarn(null, null, LoadLibrariesOptionsDialog.TITLE,
+				"Cannot Load Libraries while program is locked.  Please wait or stop running tasks.");
+			return;
+		}
+
+		try {
+			ByteProvider provider = getProvider(program);
+			LoadSpec loadSpec = getLoadSpec(provider, program);
+			AddressFactory addressFactory =
+				loadSpec.getLanguageCompilerSpec().getLanguage().getAddressFactory();
+			SystemUtilities.runSwingLater(() -> {
+				OptionsDialog dialog = new LoadLibrariesOptionsDialog(provider, program, tool,
+					loadSpec, () -> addressFactory);
+				tool.showDialog(dialog);
+			});
+		}
+		catch (LanguageNotFoundException e) {
+			Msg.showError(null, null, LoadLibrariesOptionsDialog.TITLE, "Language not found.", e);
+		}
+	}
+
 	/**
 	 * Constructs a {@link ImporterDialog} and shows it in the swing thread.
 	 * 
@@ -306,8 +304,9 @@ public class ImporterUtilities {
 	 * 			to the destination filename
 	 * @param tool the parent UI component
 	 * @param programManager optional {@link ProgramManager} instance to open the imported file in
+	 * @param monitor {@link TaskMonitor}
 	 */
-	private static void importSingleFile(FSRL fsrl, DomainFolder destinationFolder,
+	public static void showImportSingleFileDialog(FSRL fsrl, DomainFolder destinationFolder,
 			String suggestedPath, PluginTool tool, ProgramManager programManager,
 			TaskMonitor monitor) {
 
@@ -316,8 +315,8 @@ public class ImporterUtilities {
 			LoaderMap loaderMap = LoaderService.getAllSupportedLoadSpecs(provider);
 
 			SystemUtilities.runSwingLater(() -> {
-				ImporterDialog importerDialog =
-					new ImporterDialog(tool, programManager, loaderMap, provider, suggestedPath);
+				ImporterDialog importerDialog = new ImporterDialog(tool, programManager, loaderMap,
+					provider, suggestedPath);
 				if (destinationFolder != null) {
 					importerDialog.setDestinationFolder(destinationFolder);
 				}
@@ -347,8 +346,19 @@ public class ImporterUtilities {
 					doFSImportHelper((GFileSystemProgramProvider) refdFile.fsRef.getFilesystem(),
 						gfile, destFolder, consumer, monitor);
 				if (program != null) {
-					doPostImportProcessing(tool, programManager, fsrl, Arrays.asList(program),
-						consumer, "", monitor);
+					LoadResults<? extends DomainObject> loadResults = new LoadResults<>(program,
+						program.getName(), destFolder.getPathname());
+					boolean success = false;
+					try {
+						doPostImportProcessing(tool, programManager, fsrl, loadResults, consumer,
+							"", monitor);
+						success = true;
+					}
+					finally {
+						if (!success) {
+							program.release(consumer);
+						}
+					}
 				}
 			}
 			catch (Exception e) {
@@ -367,16 +377,25 @@ public class ImporterUtilities {
 		Program program =
 			pfs.getProgram(gfile, DefaultLanguageService.getLanguageService(), monitor, consumer);
 
-		if (program != null) {
+		if (program == null) {
+			return null;
+		}
+
+		boolean success = false;
+		try {
 			String importFilename = ProjectDataUtils.getUniqueName(destFolder, program.getName());
 			if (importFilename == null) {
-				program.release(consumer);
 				throw new IOException("Unable to find unique name for " + program.getName());
 			}
-
 			destFolder.createFile(importFilename, program, monitor);
+			success = true;
+			return program;
 		}
-		return program;
+		finally {
+			if (!success) {
+				program.release(consumer);
+			}
+		}
 
 	}
 
@@ -401,13 +420,13 @@ public class ImporterUtilities {
 
 			Object consumer = new Object();
 			MessageLog messageLog = new MessageLog();
-			List<DomainObject> importedObjects = loadSpec.getLoader().load(bp, programName,
-				destFolder, loadSpec, options, messageLog, consumer, monitor);
-			if (importedObjects == null) {
-				return;
-			}
+			LoadResults<? extends DomainObject> loadResults = loadSpec.getLoader()
+					.load(bp, programName, tool.getProject(), destFolder.getPathname(), loadSpec,
+						options, messageLog, consumer, monitor);
 
-			doPostImportProcessing(tool, programManager, fsrl, importedObjects, consumer,
+			loadResults.save(tool.getProject(), consumer, messageLog, monitor);
+
+			doPostImportProcessing(tool, programManager, fsrl, loadResults, consumer,
 				messageLog.toString(), monitor);
 		}
 		catch (CancelledException e) {
@@ -420,34 +439,35 @@ public class ImporterUtilities {
 	}
 
 	private static Set<DomainFile> doPostImportProcessing(PluginTool pluginTool,
-			ProgramManager programManager, FSRL fsrl, List<DomainObject> importedObjects,
-			Object consumer, String importMessages, TaskMonitor monitor)
-			throws CancelledException, IOException {
+			ProgramManager programManager, FSRL fsrl,
+			LoadResults<? extends DomainObject> loadResults, Object consumer, String importMessages,
+			TaskMonitor monitor) throws CancelledException {
 
 		boolean firstProgram = true;
 		Set<DomainFile> importedFilesSet = new HashSet<>();
-		for (DomainObject importedObject : importedObjects) {
-			monitor.checkCanceled();
+		for (Loaded<? extends DomainObject> loaded : loadResults) {
+			monitor.checkCancelled();
 
-			if (importedObject instanceof Program) {
-				Program program = (Program) importedObject;
-
-				setProgramProperties(program, fsrl, monitor);
-				ProgramMappingService.createAssociation(fsrl, program);
-
+			if (loaded.getDomainObject() instanceof Program program) {
 				if (programManager != null) {
-					int openState =
-						firstProgram ? ProgramManager.OPEN_CURRENT : ProgramManager.OPEN_VISIBLE;
+					int openState = firstProgram
+							? ProgramManager.OPEN_CURRENT
+							: ProgramManager.OPEN_VISIBLE;
 					programManager.openProgram(program, openState);
 				}
 				importedFilesSet.add(program.getDomainFile());
 			}
 			if (firstProgram) {
 				// currently we only show results for the imported program, not any libraries
-				displayResults(pluginTool, importedObject, importedObject.getDomainFile(),
-					importMessages);
+				displayResults(pluginTool, loaded.getDomainObject(),
+					loaded.getDomainObject().getDomainFile(), importMessages);
+
+				// Optionally echo loader message log to application.log
+				if (!Loader.loggingDisabled && !importMessages.isEmpty()) {
+					Msg.info(ImporterUtilities.class, "Additional info:\n" + importMessages);
+				}
 			}
-			importedObject.release(consumer);
+			loaded.release(consumer);
 			firstProgram = false;
 		}
 
@@ -471,6 +491,11 @@ public class ImporterUtilities {
 		try (ByteProvider bp = fsService.getByteProvider(fsrl, false, monitor)) {
 			loadSpec.getLoader().loadInto(bp, loadSpec, options, messageLog, program, monitor);
 			displayResults(tool, program, program.getDomainFile(), messageLog.toString());
+
+			// Optionally echo loader message log to application.log
+			if (!Loader.loggingDisabled && messageLog.hasMessages()) {
+				Msg.info(ImporterUtilities.class, "Additional info:\n" + messageLog.toString());
+			}
 		}
 		catch (CancelledException e) {
 			return;
@@ -495,5 +520,49 @@ public class ImporterUtilities {
 		HelpLocation helpLocation = new HelpLocation(GenericHelpTopics.ABOUT, "About_Program");
 		AboutDomainObjectUtils.displayInformation(tool, domainFile, metadata,
 			"Import Results Summary", info, helpLocation);
+	}
+
+	/**
+	 * Gets a {@link ByteProvider} based on the {@link FileBytes} of the given {@link Program}.
+	 * <p>
+	 * NOTE: If the {@link Program} has more than one {@link FileBytes} associated with it, the
+	 * first one is used (this is typically the bytes of the originally imported file).
+	 * 
+	 * @param program The {@link Program}
+	 * @return A {@link ByteProvider} based on the {@link FileBytes} of the given {@link Program},
+	 *   or null if the {@link Program} doesn't have an associated {@link FileBytes}
+	 */
+	static ByteProvider getProvider(Program program) {
+		List<FileBytes> allFileBytes = program.getMemory().getAllFileBytes();
+		return !allFileBytes.isEmpty() ? new FileBytesProvider(allFileBytes.get(0)) : null;
+	}
+
+	/**
+	 * Get's the {@link LoadSpec} that was used to import the given {@link Program}
+	 * 
+	 * @param provider The original bytes of the {@link Program}
+	 * @param program The {@link Program}
+	 * @return The {@link LoadSpec} that was used to import the given {@link Program}, or null if
+	 *   it could not be determined
+	 */
+	static LoadSpec getLoadSpec(ByteProvider provider, Program program) {
+		LoaderMap loaderMap = LoaderService.getSupportedLoadSpecs(provider,
+			loader -> loader.getName().equalsIgnoreCase(program.getExecutableFormat()));
+
+		if (loaderMap.isEmpty()) {
+			return null;
+		}
+
+		Loader loader = loaderMap.firstKey();
+		if (loader == null) {
+			return null;
+		}
+
+		LanguageCompilerSpecPair programLcs = program.getLanguageCompilerSpecPair();
+		return loaderMap.get(loader)
+				.stream()
+				.filter(e -> programLcs.equals(e.getLanguageCompilerSpec()))
+				.findFirst()
+				.orElse(null);
 	}
 }
